; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-tle62x0.c_tle62x0_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-tle62x0.c_tle62x0_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_device = type { i32 }
%struct.tle62x0_state = type { i32 }

@gpio_attrs = common dso_local global i32** null, align 8
@dev_attr_status_show = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_device*)* @tle62x0_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tle62x0_remove(%struct.spi_device* %0) #0 {
  %2 = alloca %struct.spi_device*, align 8
  %3 = alloca %struct.tle62x0_state*, align 8
  %4 = alloca i32, align 4
  store %struct.spi_device* %0, %struct.spi_device** %2, align 8
  %5 = load %struct.spi_device*, %struct.spi_device** %2, align 8
  %6 = call %struct.tle62x0_state* @spi_get_drvdata(%struct.spi_device* %5)
  store %struct.tle62x0_state* %6, %struct.tle62x0_state** %3, align 8
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %22, %1
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.tle62x0_state*, %struct.tle62x0_state** %3, align 8
  %10 = getelementptr inbounds %struct.tle62x0_state, %struct.tle62x0_state* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp slt i32 %8, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %7
  %14 = load %struct.spi_device*, %struct.spi_device** %2, align 8
  %15 = getelementptr inbounds %struct.spi_device, %struct.spi_device* %14, i32 0, i32 0
  %16 = load i32**, i32*** @gpio_attrs, align 8
  %17 = load i32, i32* %4, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32*, i32** %16, i64 %18
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @device_remove_file(i32* %15, i32* %20)
  br label %22

22:                                               ; preds = %13
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %4, align 4
  br label %7

25:                                               ; preds = %7
  %26 = load %struct.spi_device*, %struct.spi_device** %2, align 8
  %27 = getelementptr inbounds %struct.spi_device, %struct.spi_device* %26, i32 0, i32 0
  %28 = call i32 @device_remove_file(i32* %27, i32* @dev_attr_status_show)
  %29 = load %struct.tle62x0_state*, %struct.tle62x0_state** %3, align 8
  %30 = call i32 @kfree(%struct.tle62x0_state* %29)
  ret i32 0
}

declare dso_local %struct.tle62x0_state* @spi_get_drvdata(%struct.spi_device*) #1

declare dso_local i32 @device_remove_file(i32*, i32*) #1

declare dso_local i32 @kfree(%struct.tle62x0_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
